# deepagents

./: .release-please-manifest.json
libs/cli/: CHANGELOG.md  pyproject.toml
libs/cli/deepagents_cli/: _version.py
