[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepagents-cli"
version = "0.0.18"
description = "Terminal interface for Deep Agents - interactive AI agent with file operations, shell access, and sub-agent capabilities."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
keywords = ["agents", "ai", "cli", "terminal", "llm", "langgraph", "langchain", "deep-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
]
dependencies = [
  # Framework
  "deepagents==0.3.10",
  "langchain>=1.2.7,<2.0.0",
  "langchain-openai>=1.1.7,<2.0.0",
  "langgraph-checkpoint-sqlite>=3.0.0,<4.0.0",

  # UI/Terminal
  "textual>=6.0.0,<8.0.0",
  "textual-autocomplete>=3.0.0,<5.0.0",
  "prompt-toolkit>=3.0.52,<4.0.0",
  "rich>=14.0.0,<15.0.0",
  "markdownify>=0.13.0,<2.0.0",

  # Sandbox integrations
  "daytona>=0.113.0,<1.0.0",
  "langsmith>=0.6.6",
  "modal>=0.65.0,<2.0.0",
  "runloop-api-client>=0.69.0",

  # Tools
  "tavily-python>=0.7.21,<1.0.0",

  # Clipboard
  "pyperclip>=1.11.0,<2.0.0",

  # Utilities
  "python-dotenv>=1.0.0,<2.0.0",
  "requests>=2.0.0,<3.0.0",
  "pillow>=10.0.0,<13.0.0",
  "pyyaml>=6.0.0",
  "aiosqlite>=0.19.0,<1.0.0",
]

[project.optional-dependencies]
vertexai = ["langchain-google-vertexai>=3.0.0,<4.0.0"]

[project.scripts]
deepagents = "deepagents_cli:cli_main"
deepagents-cli = "deepagents_cli:cli_main"

[project.urls]
Homepage = "https://docs.langchain.com/oss/python/deepagents/overview"
Documentation = "https://reference.langchain.com/python/deepagents/"
Repository = "https://github.com/langchain-ai/deepagents"
Issues = "https://github.com/langchain-ai/deepagents/issues"
Changelog = "https://github.com/langchain-ai/deepagents/blob/master/libs/cli/CHANGELOG.md"
Twitter = "https://x.com/LangChain"

[dependency-groups]
test = [
    "build>=1.0.0,<2.0.0",
    "ruff>=0.14.0,<1.0.0",
    "ty>=0.0.1,<1.0.0",
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.25.3,<1.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "pytest-socket>=0.7.0,<1.0.0",
    "pytest-timeout>=2.3.1,<3.0.0",
    "pytest-watcher>=0.3.4,<1.0.0",
    "pytest-xdist>=3.8.0,<4.0.0",
    "responses>=0.25.0,<1.0.0",
    "twine>=6.0.0,<7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["deepagents_cli"]

[tool.hatch.build.targets.wheel.shared-data]
"deepagents_cli/default_agent_prompt.md" = "deepagents_cli/default_agent_prompt.md"
"deepagents_cli/*.tcss" = "deepagents_cli/"

[tool.uv.sources]
deepagents = { path = "../deepagents", editable = true }

[tool.ty.environment]
extra-paths = ["../deepagents"]

[tool.ty.rules]
# https://docs.astral.sh/ty/rules/

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "C90",     # McCabe complexity
    "COM812",  # Messes with the formatter
    "CPY",     # No copyright
    "FBT",     # Boolean positional arguments (too pedantic)
    "FIX002",  # Line contains TODO
    "ISC001",  # Messes with the formatter
    "PERF203", # Rarely useful
    "PLR09",   # Too many something (args, branches, returns, statements, etc)
    "PLR1702", # Too many nested blocks
    "SLF001",  # Private member access
    "PLC0415", # Imports should be at the top. Not always desirable
    "PLC0414", # Inconsistent with how type checkers expect to be notified of intentional re-exports
    "TD002",   # Missing author in TODO
    "TD003",   # Missing issue link in TODO
]
unfixable = ["B028"] # People should intentionally tune the stacklevel

flake8-annotations.allow-star-arg-any = true
flake8-annotations.mypy-init-return = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true
known-first-party = ["deepagents_cli"]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-var-parameters = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN001", "ANN201", "D1", "DOC", "F401", "PLC1901", "PLC2701", "PLR2004", "PLR6201", "PLR6301", "PLW0108", "RUF001", "S", "SLF"]
"scripts/**" = ["BLE001", "INP", "S", "T201"]
"deepagents_cli/agent.py" = [
    "PLR2004",  # Magic value used in comparison
    "SIM108",   # Use ternary operator instead of if-else
]
"deepagents_cli/app.py" = [
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed
    "ARG002",   # Unused method argument
    "ASYNC110", # Use `asyncio.Event` instead of busy-waiting
    "BLE001",   # Do not catch blind exception
    "PLR2004",  # Magic value used in comparison
    "SIM108",   # Use ternary operator instead of if-else
]
"deepagents_cli/cli.py" = [
    "T201",     # `print` found
]
"deepagents_cli/clipboard.py" = [
    "BLE001",   # Do not catch blind exception
]
"deepagents_cli/config.py" = [
    "ERA001",   # Found commented-out code
    "PLR2004",  # Magic value used in comparison
]
"deepagents_cli/file_ops.py" = [
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed
    "BLE001",   # Do not catch blind exception
]
"deepagents_cli/image_utils.py" = [
    "BLE001",   # Do not catch blind exception
]
"deepagents_cli/input.py" = [
    "BLE001",   # Do not catch blind exception
    "PLR6301",  # Method could be a function or static method
]
"deepagents_cli/integrations/runloop.py" = [
    "B904",     # Within an `except` clause, raise exceptions with `raise ... from err`
]
"deepagents_cli/integrations/sandbox_factory.py" = [
    "BLE001",   # Do not catch blind exception
]
"deepagents_cli/core/sessions.py" = [
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed
    "BLE001",   # Do not catch blind exception
]
"deepagents_cli/core/ui_display_types.py" = [
    "A003",     # Class attribute shadows a Python builtin
]
"deepagents_cli/local_context.py" = [
    "ARG002",   # Unused method argument
    "BLE001",   # Do not catch blind exception
]
"deepagents_cli/project_utils.py" = [
    "ERA001",   # Found commented-out code
]
"deepagents_cli/skills/commands.py" = [
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed
    "ISC003",   # Explicitly concatenated string should be implicitly concatenated
]
"deepagents_cli/skills/load.py" = [
    "PLC2701",  # Private name import
]
"deepagents_cli/textual_adapter.py" = [
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed
    "BLE001",   # Do not catch blind exception
    "PLR2004",  # Magic value used in comparison
    "TRY203",   # Use `raise` without arguments inside exception handler
]
"deepagents_cli/tools.py" = [
    "ANN201",   # Missing return type annotation for public function
    "BLE001",   # Do not catch blind exception
    "E722",     # Do not use bare `except`
    "PLR2004",  # Magic value used in comparison
]
"deepagents_cli/ui.py" = [
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed
    "ARG002",   # Unused method argument
    "BLE001",   # Do not catch blind exception
    "PLR2004",  # Magic value used in comparison
]
"deepagents_cli/widgets/approval.py" = [
    "A002",     # Argument shadows a Python builtin
    "ARG002",   # Unused method argument
    "B007",     # Loop control variable not used within the loop body
    "RUF001",   # String contains ambiguous character
]
"deepagents_cli/widgets/chat_input.py" = [
    "ARG002",   # Unused method argument
    "PLR6301",  # Method could be a function or static method
]
"deepagents_cli/widgets/messages.py" = [
    "PLR6301",  # Method could be a function or static method
]
"deepagents_cli/widgets/status.py" = [
    "PLR2004",  # Magic value used in comparison
    "PLR6301",  # Method could be a function or static method
]
"deepagents_cli/widgets/tool_widgets.py" = [
    "PLR6301",  # Method could be a function or static method
]
"deepagents_cli/widgets/tool_renderers.py" = [
    "D102",     # Missing docstring in public method
    "PLR2004",  # Magic value used in comparison
]
"deepagents_cli/main.py" = [
    "BLE001",   # Do not catch blind exception
    "T201",     # `print` found
]
"examples/skills/arxiv-search/arxiv_search.py" = [
    "BLE001",   # Do not catch blind exception
    "TRY300",   # Consider moving this statement to an `else` block
]
"examples/skills/skill-creator/scripts/init_skill.py" = [
    "ANN001",   # Missing type annotation for function argument
    "ANN201",   # Missing return type annotation for public function
    "BLE001",   # Do not catch blind exception
    "PLR2004",  # Magic value used in comparison
    "T201",     # `print` found
]
"examples/skills/skill-creator/scripts/quick_validate.py" = [
    "ANN001",   # Missing type annotation for function argument
    "ANN201",   # Missing return type annotation for public function
    "N806",     # Variable in function should be lowercase
    "PLR2004",  # Magic value used in comparison
    "T201",     # `print` found
]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
timeout = 30  # Default timeout for all tests (can be overridden per-test)

addopts = "--strict-markers --strict-config --durations=5"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
